# void-reckoning-engine

./: .coveragerc  .dockerignore  .gitignore  Dockerfile.dashboard  LICENSE  README.md  analyze_axikora_battle.py  analyze_battle_losses.py  benchmark_combat.py  benchmark_result.txt  deep_dive_battle.py  find_biggest_battles.py  head_econ.txt  head_events.txt  path_events.txt  pytest.ini  requirements-dev.txt  requirements.txt  run.py  setup.py  tail_events.txt  tail_log.txt  tail_log_utf8.txt  test_reinforcement_scaling.py  verification_debug.txt  verification_debug_2.txt  verification_output.txt  verify_auditor_rules.py  verify_causal_tracing.py  verify_melee_args.py  verify_observability_fixes.py  verify_projectile_collision.py  verify_replay_analysis.py  verify_rust_bridge.py  verify_rust_causal.py  verify_trace_api.py  verify_transport_boarding.py
config/: active_universe.txt  alert_rules.yaml  analytics_config.yaml  balance_config.json  dashboard_config.json  debug_multi.json  dual_void_portals_config.json  infrastructure_test_config.json  performance_test_config.json  quick_verification_config.json  temp_multi_test.json  test_minimal.json  test_multi_config.json  test_output_style.json  unified_simulation_config.json  void_reckoning_config.json
docker/: docker-compose.yml
frontend/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend_v2_backup/: package-lock.json  vitest.config.ts
logs/: campaign.json
native_pulse/: Cargo.toml
native_pulse/void_reckoning_auditor/: Cargo.toml
native_pulse/void_reckoning_auditor/src/: consistency.rs  engine.rs  lib.rs  registry.rs  rules.rs  scheduler.rs  types.rs
native_pulse/void_reckoning_bridge/: Cargo.toml  pyproject.toml
native_pulse/void_reckoning_bridge/src/: lib.rs  observability.rs
native_pulse/void_reckoning_combat/: Cargo.toml
native_pulse/void_reckoning_combat/src/: engine.rs  lib.rs  mechanics.rs  targeting.rs
native_pulse/void_reckoning_economy/: Cargo.toml
native_pulse/void_reckoning_economy/src/: engine.rs  lib.rs  trade.rs  types.rs
native_pulse/void_reckoning_pathfinder/: Cargo.toml
native_pulse/void_reckoning_pathfinder/src/: lib.rs
native_pulse/void_reckoning_shared/: Cargo.toml
native_pulse/void_reckoning_shared/src/: lib.rs
plans/: 01_project_structure.md  02_migration_phases.md  03_integration_strategy.md  04_installation_requirements.md  05_god_mode_feature_plan.md  06_god_perspective_observability_design.md  07_rust_integration_architecture.md  08_pyo3_bridge_layer_specification.md  09_phase1_migration_pathfinding.md  10_phase2_migration_combat.md  (+21 more)
(+1445 files in other folders)
