[workspace]
members = [
    "void_reckoning_pathfinder",
    "void_reckoning_bridge", "void_reckoning_combat", "void_reckoning_auditor", "void_reckoning_economy", "void_reckoning_shared",
]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
dashmap = "5.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
