[package]
name = "void_reckoning_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "void_reckoning_bridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
void_reckoning_pathfinder = { path = "../void_reckoning_pathfinder" }
void_reckoning_combat = { path = "../void_reckoning_combat" }
void_reckoning_auditor = { path = "../void_reckoning_auditor" }
void_reckoning_economy = { path = "../void_reckoning_economy" }
uuid = { workspace = true }
void_reckoning_shared = { path = "../void_reckoning_shared" }
